--- a/css/cssPublic.css
+++ b/css/cssPublic.css
@@ -490,3 +490,29 @@
      padding-bottom: .2rem;
  }
  /* charts space _start*/
+
+
+
+
+/* chartss or tables noteslist _start */
+.noteList {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-size: 0.2933333333rem;
+    color: #425C72;
+    letter-spacing: 0;
+    margin-top: .1rem;
+    padding-bottom: .3rem;
+}
+.noteList .note {
+    width: 100%;
+    height: 0.4266666667rem;
+    line-height: 0.4266666667rem;
+    text-align: center;
+}
+
+.noteList .note span {
+    color: #0DB95F;
+}
+/* chartss or tables noteslist _end */
