--- a/css/service.css
+++ b/css/service.css
@@ -242,6 +242,18 @@ a:hover {
     display: flex;
 }
 
+.itemVal li:nth-child(odd) {
+    background: #eefeee;
+}
+.itemVal li:nth-child(even) {
+    background: #ffffff;
+}
+.itemVal li:hover {
+    background: #97f79e;
+    transform: scaleY(1.5);
+}
+
+
 .itemVal li p {
     width: 20%;
     height: 0.53rem;
@@ -382,6 +394,57 @@ a:hover {
     letter-spacing: 0;
     margin-left: 0.61rem;
 }
+
+
+
+/**
+ * Author: zhangfs
+ * Date: 2018/04/11 14:31
+ * Func: 月份选择控件;  案例: 用户分析
+ */
+.monthPicker {
+    width: 4.5rem;
+    height: 0.8rem;
+    margin: 0 auto 0.2rem;
+    background: #F2F3F5;
+    box-shadow: inset 0 0.027rem 0.1rem 0 #D5D9DD;
+    border-radius: 2.67rem;
+    display: flex;
+}
+.monthPicker .preMonthBtn {
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.27rem;
+    color: #647888;
+    letter-spacing: 0;
+    margin-left: 0.4rem;
+}
+.monthPicker .showMonth {
+    width: 1.2rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.32rem;
+    color: #0DB95F;
+    letter-spacing: 0;
+    margin-left: 0.5rem;
+}
+.monthPicker .showMonth .appMonth {
+    width: 1.2rem;
+    font-size: 0.32rem;
+    color: #0DB95F;
+    letter-spacing: 0;
+    height: 0.8rem;
+    background: transparent;
+}
+.monthPicker .nextMonthBtn {
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.27rem;
+    color: #647888;
+    letter-spacing: 0;
+    margin-left: 0.4rem;
+}
+
 
 
 
@@ -985,6 +1048,8 @@ div.dw-persp div.dw.dwbg {
     bottom: 0.2666666667rem;
 }
 
+
+
 /* 目录各图标 */
 .m-income span {
     background: url(../images/icon_mapview.png);
@@ -1073,6 +1138,16 @@ div.dw-persp div.dw.dwbg {
 }
 .m-watch .active {
     background: url(../images/icon_biview_chose.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.m-app span {
+    background: url(../images/app.png);
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.m-app .active {
+    background: url(../images/app_chose.png);
     -webkit-background-size: cover;
     background-size: cover;
 }
